removed footer message

--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 <body>
     <p>My name is Mikenna, and I have a lot to learn!</p>
 </body>
-<footer>Hello World</footer>
+<footer></footer>
 </html>
