Added content to index page

--- a/index.html
+++ b/index.html
@@ -2,12 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mikenna N. Atkinson</title>
+    <meta name="description" content=""
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-    <p>My name is Mikenna, and I have a lot to learn!</p>
+    <header>
+<h1>Mikenna N. Atkinson</h1>
+    </header>
+    <nav>
+       
+    </nav>
+    <main>
+        <section>
+            <h2></h2>
+            <ul>
+                <li>Lesson 02:<a href="#">Assignment Link</a></li>
+                <li>Lesson 03:<a href="#">Assignment Link</a></li>
+                <li>Lesson 04:<a href="#">Link | Link</a></li> 
+            </ul>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
-<footer></footer>
 </html>
