--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mikenna N. Atkinson</title>
-    <meta name="description" content="Mikenna Atkinson's WDD230 Web Page">
+    <meta name="description" content="Mikenna Atkinson's wdd230 assignment portal at Brigham Young University-Idaho">
       <link href="css/main.css" rel="stylesheet">
       <script defer src="js/dates"></script>
   </head>
@@ -19,7 +19,7 @@
       
     </nav>
     <main>
-        <img src="images/Mikennaportrait.jpg" alt="Mikenna Atkinson" />
+        <img src="images/Mikennaportrait.jpg" alt="Mikenna Atkinson">
       <section>
         <h2>WDD 230:Assignment Portal</h2>
         <ul>
