--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mikenna N. Atkinson</title>
     <meta name="description" content="Mikenna Atkinson's wdd230 assignment portal at Brigham Young University-Idaho">
-      <link href="css/main.css" rel="stylesheet">
-      <script defer src="js/dates"></script>
+      <a href="css/main.css" rel="stylesheet">
+     
   </head>
 
   <body>
@@ -30,9 +30,9 @@
       </section>
     </main>
     <footer>
-      &copy; <span id ="copyrightyear"></span> | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> | Last
-      Updated:<span id="currentdate"></span>
+      &copy;  | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> | Last
+      Updated: <span id="currentdate"></span>
     </footer>
-  
+ 
     </body>
 </html>
