--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <footer>
       &copy;  | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> | Last
       Updated: <span id="currentdate2"></span>
+
+      <script src ="js/date.js"></script>
     </footer>
  
     </body>
