--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     </main>
     <footer>
       &copy;  | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> | Last
-      Updated: <span id="currentdate2"></span>
+      Updated: <span id="currentdate"></span>
 
-      <script src ="js/date.js"></script>
+      <script src="js/date.js"></script>
     </footer>
  
     </body>
