--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     
     <footer>
       &copy; | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> | Last
-      Updated: <span id="currentdate"</span>
+      Updated: <span id="currentdate"></span>
 
     </footer>
     
