correction to css and js sources

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mikenna N. Atkinson</title>
     <meta name="description" content="Mikenna Atkinson's wdd230 assignment portal at Brigham Young University-Idaho">
-      <a href="css/main.css" rel="stylesheet"></a>
-      <a href="js/date.js"></a>
+      <link rel="stylesheet" href="css/main.css">
+      <script src="js/date.js"></script>
      
   </head>
 
