--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Mikenna N. Atkinson</title>
     <meta name="description" content="Mikenna Atkinson's wdd230 assignment portal at Brigham Young University-Idaho">
       <link rel="stylesheet" href="css/main.css">
-      
+      <link rel="stylesheet" href="css/normalize.css">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
      
   </head>
 
