--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
-     
+<script src="js/date.js" defer></script>
   </head>
 
   <body>
@@ -26,7 +26,7 @@
       <section>
         <h2>WDD 230:Assignment Portal</h2>
         <ul>
-            <li>Lesson 02:<a href="#">Assignment Link</a></li>
+            <li>Lesson 02:<a href="#">Design Principles</a></li>
             <li>Lesson 03:<a href="#">Assignment Link</a></li>
             <li>Lesson 04:<a href="#">Link | Link</a></li>
           </ul>
@@ -34,10 +34,9 @@
     </main>
     
     <footer>
-      &copy;<script type="text/javascript">document.write(new Date().getFullYear());</script>  | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> | Last
+      &copy;<script type="text/javascript"><span year=new Date().getFullYear());</span>  | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> | Last
       Updated: 
-      <p id= "date"></p>
+      <p id="date"></p>
     </footer>
-    <script src="js/date.js"></script>
     </body>
 </html>
