--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <section>
         <h2>WDD 230:Assignment Portal</h2>
         <ul>
-            <li>Lesson 02:<a href="#">Design Principles</a></li>
+            <li>Lesson 02:<a href="design-principles.html">Design Principles</a></li>
             <li>Lesson 03:<a href="#">Assignment Link</a></li>
             <li>Lesson 04:<a href="#">Link | Link</a></li>
           </ul>
@@ -34,9 +34,9 @@
     </main>
     
     <footer>
-      &copy;<script type="text/javascript"><span year=new Date().getFullYear());</span>  | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> | Last
-      Updated: 
-      <p id="date"></p>
+      &copy; <span id="copyrightyear"></span> | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a>
+      Last Updated:
+        <span id="lastModified"</span>
     </footer>
     </body>
 </html>
