--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -51,9 +51,8 @@
      </section>
  </main>
 <footer>
-    &copy;<script type="text/javascript"><span year=new Date().getFullYear());</span>  | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> | Last
-        Updated: 
-        <p id="date"></p>
+    &copy; <span id="copyrightyear"></span> | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a>
+      Last Updated:<span id="lastmodified"</span>
 </footer>
 
   </body>        
