--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
     </main>
     
     <footer>
-      &copy; <span id="copyrightyear"></span> | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a>
-      Last Updated:
-        <span id="lastModified"</span>
+      &copy; <span id="copyrightyear"></span> | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> Last Updated:<span id="lastmodified"</span>
     </footer>
     </body>
 </html>
