--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -18,6 +18,7 @@
   <body>
       <header>
           <h1>Design Principles</h1>
+          <h3>Mikenna Atkinson</h3>
       </header>
  <main>
      <section>
