--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -64,4 +64,5 @@ showing up on the page itself first thing.
     &copy; <span id="copyrightyear"></span> | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> Last Updated:<span id="lastmodified"</span>
 </footer>
 
-  </body>        
+  </body> 
+  </html>       
