--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <section>
         <h2>WDD 230:Assignment Portal</h2>
         <ul>
-            <li>Lesson 02:<a href="design-principles.html">Design Principles</a></li>
+            <li>Lesson 02:<a href="https://mikennaa.github.io/wdd230//lesson2/design-principles.html">Design Principles</a></li>
             <li>Lesson 03:<a href="#">Assignment Link</a></li>
             <li>Lesson 04:<a href="#">Link | Link</a></li>
           </ul>
