--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -9,11 +9,10 @@
           <link rel="stylesheet" href="small.css">
           <link rel="stylesheet" href="medium.css">
           <link rel="stylesheet" href="large.css">
-          <script src="footerdates.js" defer></script>
+          <script defer src="footerdates.js"></script>
           <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,800;1,300&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;0,800;1,400&display=swap" rel="stylesheet">
   </head>
   <body>
       <header>
@@ -61,7 +60,7 @@ showing up on the page itself first thing.
      </section>
  </main>
 <footer>
-    &copy; <span id="copyrightyear"></span> | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> Last Updated:<span id="lastmodified"</span>
+    &copy; <span id="copyrightyear"></span> | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> Last Updated:<span id="lastupdate"</span>
 </footer>
 
   </body> 
