--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
-<script src="js/date.js" defer></script>
+<script defer src="js/date.js"></script>
   </head>
 
   <body>
@@ -34,7 +34,7 @@
     </main>
     
     <footer>
-      &copy; <span id="copyrightyear"></span> | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> Last Updated:<span id="lastmodified"</span>
+      &copy; <span id="copyrightyear"></span> | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> Last Updated:<span id="lastupdate"</span>
     </footer>
     </body>
 </html>
