--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -60,7 +60,7 @@ showing up on the page itself first thing.
      </section>
  </main>
 <footer>
-    &copy; <span id="copyrightyear"></span> | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> Last Updated:<span id="lastupdate"</span>
+    &copy; <span id="copyrightyear"></span> | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> Last Updated:<span id="lastupdate"></span>
 </footer>
 
   </body> 
