--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>WDD 230:Assignment Portal</h2>
         <ul>
             <li>Lesson 02:<a href="https://mikennaa.github.io/wdd230//lesson2/design-principles.html">Design Principles</a></li>
-            <li>Lesson 03:<a href="#">Weather Site Project</a></li>
+            <li>Lesson 03:<a href="https://mikennaa.github.io/wdd230//lesson3/index.html">Weather Site Project</a></li>
             <li>Lesson 04:<a href="#">Link | Link</a></li>
           </ul>
       </section>
