--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Mikenna Atkinson- Weather Site Project Map</title>
+        <title>Mikenna Atkinson-WDD230 Weather Site Project Map</title>
         <meta name="description" content="Mikenna Atkinson's Naturally Weather Site Plan assignment for wdd230 at Brigham Young University-Idaho">
           <link rel="stylesheet" href="normalize.css">
           <link rel="stylesheet" href="small.css">
@@ -17,25 +17,29 @@
       <header>
           <h1>Naturally Weather Site Plan</h1>
           <h2>Mikenna Atkinson</h2>
-          <img src="images/weatherbolt.png" alt="Naturally Weather Logo"
       </header>
+      <nav>
+          <ul>
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="target-audience.html">TARGET AUDIENCE</a></li>
+              <li><a href="typography.html">TYPOGRAPHY</a></li>
+              <li><a href="color-scheme.html">COLOR SCHEME</a></li>
+          </ul>
+      </nav>
  <main>
      <section>
-         <h2>Site Name</h2>
-        <p>Naturally Weather</p>
+         <h2>Site & Domain Name</h2>
+        <p>Naturally Weather <a href="wwww.naturallyweather.com"</a>
+        </p>
         </section>
 
         <section>
             <h2>Site Purpose</h2>
             <p>
-
+The purpose of Naturally Weather is to educate people on the natural patterns and happenings of weather on a daily, and weekly basis.
             </p>
         </section>
 
-        <section>
-            <h2>Domain</h2>
-            <a href="wwww.naturallyweather.com">Naturally Weather</a>
-        </section>
 
         <section>
             <h2>Logo</h2>
