--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -16,7 +16,7 @@
   <body>
       <header>
           <h1>Naturally Weather Site Plan</h1>
-          <h2>Mikenna Atkinson</h2>
+          <h2 class="author-name">Mikenna Atkinson</h2>
       </header>
       <nav>
           <ul>
@@ -29,8 +29,9 @@
  <main>
      <section>
          <h2>Site & Domain Name</h2>
-        <p>Naturally Weather <a href="wwww.naturallyweather.com"</a>
-        </p>
+        <h3>Naturally Weather</h3>
+         <a href="wwww.naturallyweather.com"><h3>Naturallyweather.com</h3></a>
+
         </section>
 
         <section>
