--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -17,10 +17,23 @@
       <header>
           <h1>Naturally Weather</h1>
       </header>
- <main>
-     <section>
-         
- </main>
+      <nav>
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="target-audience.html">TARGET AUDIENCE</a></li>
+            <li><a href="typography.html">TYPOGRAPHY</a></li>
+            <li><a href="color-scheme.html">COLOR SCHEME</a></li>
+        </ul>
+    </nav>
+<main>
+   <section>
+       <h2>Color Scheme</h2>
+       <img src="images/color-scheme.jpeg" class="color-scheme" alt="Naturally weather color scheme">
+      </section>
+
+ 
+</main>
+
 <footer>
     &copy; <span id="copyrightyear"></span> | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> Last Updated:<span id="lastupdate"></span>
 </footer>
