--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -14,13 +14,27 @@
 <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Poppins:wght@100;200;300;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
   <body>
-      <header>
-          <h1>Naturally Weather</h1>
-      </header>
- <main>
-     <section>
-         
- </main>
+    <header>
+        <h1>Naturally Weather Site Plan</h1>
+        <h2 class="author-name">Mikenna Atkinson</h2>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="target-audience.html">TARGET AUDIENCE</a></li>
+            <li><a href="typography.html">TYPOGRAPHY</a></li>
+            <li><a href="color-scheme.html">COLOR SCHEME</a></li>
+        </ul>
+    </nav>
+<main>
+
+   <section>
+       
+      </section>
+
+ 
+</main>
+
 <footer>
     &copy; <span id="copyrightyear"></span> | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> Last Updated:<span id="lastupdate"></span>
 </footer>
