color scheme paragraph text

--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -16,6 +16,7 @@
   <body>
       <header>
           <h1>Naturally Weather</h1>
+          <h2 class="author-name">Mikenna Atkinson</h2>
       </header>
       <nav>
         <ul>
@@ -31,6 +32,15 @@
        <img src="images/color-scheme.jpeg" class="color-scheme" alt="Naturally weather color scheme">
       </section>
 
+      <section>
+          <p>
+              #262473 - Darkest blue - Headers, footers, paragraph and paragraph text<br>
+              #034C8C - Medium blue - Subtle but complementary color on the site<br>
+              #6AAED9 - Light blue - Navigation bar<br>
+              #F2CF05 - Yellow - H2 tags<br>
+              #F5863B - Orange - Accent color
+          </p>
+      </section>
  
 </main>
 
