--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -34,7 +34,7 @@
 
       <section>
           <p>
-              #262473 - Darkest blue - Headers, footers, paragraph and paragraph text<br>
+              #262473 - Darkest blue - Headers, footers, and paragraph text<br>
               #034C8C - Medium blue - Subtle but complementary color on the site<br>
               #6AAED9 - Light blue - Navigation bar<br>
               #F2CF05 - Yellow - H2 tags<br>
