typography page formatting

--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -16,9 +16,17 @@
   <body>
       <header>
           <h1>Naturally Weather</h1>
+          <h2 class="author-name">Mikenna Atkinson</h2>
       </header>
  <main>
      <section>
+        <h2>Typography</h2>
+<h3 class="title-font">Header Text</p>
+<h3 class="header-font">Headings Text</p>
+<h3 class="paragraph-font">Paragraph Text</p>
+
+     </section>
+
          
  </main>
 <footer>
