--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -18,19 +18,28 @@
           <h1>Naturally Weather</h1>
           <h2 class="author-name">Mikenna Atkinson</h2>
       </header>
+      
+      <nav>
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="target-audience.html">TARGET AUDIENCE</a></li>
+            <li><a href="typography.html">TYPOGRAPHY</a></li>
+            <li><a href="color-scheme.html">COLOR SCHEME</a></li>
+        </ul>
+    </nav>
+
  <main>
      <section>
         <h2>Typography</h2>
-<h3 class="title-font">Header Text</p>
-<h3 class="header-font">Headings Text</p>
-<h3 class="paragraph-font">Paragraph Text</p>
+<h3 class="header-font">Header & Headings Text: Lora, serif, bolded</h3>
+<h3 class="paragraph-font">Paragraph & Navigation Text: Poppins, sans-serif</p>
 
      </section>
 
          
  </main>
 <footer>
-    &copy; <span id="copyrightyear"></span> | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> Last Updated:<span id="lastupdate"></span>
+    &copy; <span id="copyrightyear"></span> | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> Last Updated: <span id="lastupdate"></span>
 </footer>
 
   </body> 
