--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -37,7 +37,8 @@
         <section>
             <h2>Site Purpose</h2>
             <p>
-The purpose of Naturally Weather is to educate people on the natural patterns and happenings of weather on a daily, and weekly basis.
+Naturally Weather was created to keep parents up to date on the latest weather happenings. We understand that the natural flow of life can be unpredictable but weather shouldn't be. Our purpose is to keep you up to 
+date from the moment you're awaken by little voices to your last waking moment, a rare quiet moment- by keeping the unpredictable to a minimum. 
             </p>
         </section>
 
