--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -58,11 +58,11 @@
 <section>
     <h3>Scenarios</h3>
         <ul type="disc">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Mom has a busy day ahead, which includes a list of errands and a cute crew, all under 10. She wants to make sure all their needs are met, including the appropriate clothing.</li>
+            <li>Dad gets to hang out with the kiddos while Mom spends the day with her sisters. He wants to show his kids how cool he is and take them to the zoo, out for ice cream and maybe even a drive-in movie but with the wife gone, how will he know what clothing choices he should make for them?</li>
+            <li>The kids just want to play outside! Rather than have them change their clothes multiple times a day- that just adds to the laundry pile, Mom needs to know what clothing recommendations to make!</li>
+            <li>The family vacation has finally arrived, but the hardest part has also presented itself, packing for an entire week! What do we wear?</li>
+            <li>Mom decided to get up a little early today, and while it's still chilly outside, she really doesn't want to have to change her clothes again, so rather than be too hot or too cold all day, she'd love to know how to dress appropriately.</li>
         </ul>
     
 </section>
