div edits-contentbox

--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -35,10 +35,10 @@
 <main>
   <h2>Preston, Idaho</h2>
   <section class="maincontent">
-      <div>Hero Image/Weather Summary</div>
-      <div>5-Day Forecast</div>
-      <div>Article</div>
-      <div>Contact Information</div>
+      <div class="contentbox">Hero Image/Weather Summary</div>
+      <div class="contentbox">5-Day Forecast</div>
+      <div class="contentbox">Article</div>
+      <div class="contentbox">Contact Information</div>
   </section>
 </main>
 
