--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -16,11 +16,12 @@
   <body>
       <header>
           <img src="images/weatherbolt.png" alt="naturally weather logo with cloud and bolt">
-          <section></section>
+          <section>
           <h1>Naturally Weather</h1>
-          <h3 class="tagline">Predicting Mothernature before the day begins</h3>
-        </section>
+        <div class="tagline">Predicting Mothernature before the day begins</div>
+      </section>
       </header>
+
       <nav>
         <button onclick="toggleNav()">Menu</button>
         <ul id="townnav">
