--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -23,9 +23,8 @@
       </header>
 
       <nav>
-        <button onclick="toggleNav()">Menu</button>
-        <ul id="townnav">
-            <li><a href="index.html">Home</a></li>
+        <ul class="townnav">
+            <li><a href="index.html" onclick="toggleMenu()">&#9776; Home</a></li>
             <li><a href="preston-4.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
