--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -23,8 +23,9 @@
       </header>
 
       <nav>
-        <ul class="townnav">
-            <li><a href="index.html" onclick="toggleMenu()">&#9776; Home</a></li>
+            <ul class="townnav">
+            <li><a href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="preston-4.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
@@ -32,6 +33,7 @@
             <li><a href="#">Gallery</a></li>
         </ul>
     </nav>
+
 <main>
   <h2>Preston, Idaho</h2>
   <section class="maincontent">
