--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Mikenna Atkinson- Preston Town Page</title>
         <meta name="description" content="Mikenna Atkinson's preston town page assignment for wdd230 at Brigham Young University-Idaho">
-          <link rel="stylesheet" href="css/normalize.css">
+    <link rel="shortcut icon" href="favicon (1).ico">
+        <link rel="stylesheet" href="css/normalize.css">
           <link rel="stylesheet" href="css/small.css">
           <link rel="stylesheet" href="css/large.css">
           <script defer src="js/footerdates.js"></script>
