Title Update & Medium css

--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -4,10 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Mikenna Atkinson- Preston Town Page</title>
-        <meta name="description" content="Mikenna Atkinson's preston town page assignment for wdd230 at Brigham Young University-Idaho">
+        <meta name="description" content="Naturally Weather Preston, Idaho">
     <link rel="shortcut icon" href="favicon (1).ico">
         <link rel="stylesheet" href="css/normalize.css">
           <link rel="stylesheet" href="css/small.css">
+          <link rel="stylesheet" href="css/medium.css">
           <link rel="stylesheet" href="css/large.css">
           <script defer src="js/footerdates.js"></script>
           <link rel="preconnect" href="https://fonts.googleapis.com">
