--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <ul>
             <li>Lesson 02:<a href="https://mikennaa.github.io/wdd230//lesson2/design-principles.html">Design Principles</a></li>
             <li>Lesson 03:<a href="https://mikennaa.github.io/wdd230//lesson3/index.html">Weather Site Project</a></li>
-            <li>Lesson 04:<a href="https://mikennaa.github.io/wdd230/lesson4/preston-4.html">Preston Town Page</a></li>
+            <li>Lesson 04:<a href="https://mikennaa.github.io/wdd230/lesson4/preston-4.html">Preston Weather Page</a></li>
           </ul>
       </section>
     </main>
