--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -25,7 +25,7 @@
       </header>
 
       <nav>
-            <ul class="townnav">
+            <ul id="townnav" class="hide">
             <li><a href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
             <li><a href="index.html">Home</a></li>
             <li><a href="preston-4.html">Preston</a></li>
