--- a/bom/bom.html
+++ b/bom/bom.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BOM Top 25</title>
-    <meta name="description" content="Mikenna Atkinson's wdd230 assignment BOM Top 25 at Brigham Young University-Idaho">
-</head>
+    <meta name="description" content="Favorite Book of Mormon Scriptures">
+    <link ref="stylesheet" href="css/small.css">
+    <script defer src="js/bom.js"></script>
+  </head>
+
 
 <body>
   <header>
@@ -23,8 +26,5 @@
 		</ul>
 	</div>
 </main>
-
-<footer>
-  </footer>
   </body>
 </html>
