--- a/bom/bom.html
+++ b/bom/bom.html
@@ -6,7 +6,7 @@
     <title>BOM Top 25</title>
     <meta name="description" content="Favorite Book of Mormon Scriptures">
     <script defer src="js/bom.js"></script>
-    <link ref="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/small.css">
   </head>
 
 
