--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -25,8 +25,8 @@
       </header>
 
       <nav>
-            <ul id="townnav" class="hide">
-            <li><a href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
+            <ul class="navigation">
+              <li><a class="hammenu" href="#">Menu</a></li>
             <li><a href="index.html">Home</a></li>
             <li><a href="preston-4.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
