--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Mikenna Atkinson- Preston Town Page</title>
+        <title>Naturally Weather Preston, Idaho</title>
         <meta name="description" content="Naturally Weather Preston, Idaho">
     <link rel="shortcut icon" href="favicon (1).ico">
         <link rel="stylesheet" href="css/normalize.css">
