--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -26,7 +26,7 @@
 
       <nav>
             <ul class="navigation">
-              <li><a class="hammenu" href="#">&#9776</a></li>
+              <li><a class="hammenu" href="#">Menu</a></li>
             <li><a href="index.html">Home</a></li>
             <li><a href="preston-4.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
