--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mikenna N. Atkinson</title>
     <meta name="description" content="Mikenna Atkinson's wdd230 assignment portal at Brigham Young University-Idaho">
-    <link rel="shortcut icon" href="favicon (1).ico">  
+    <link rel="shortcut icon" href="favicon.ico">  
     <link rel="stylesheet" href="css/small.css">
       <link rel="stylesheet" href="css/medium.css">
       <link rel="stylesheet" href="css/normalize.css">
