--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Naturally Weather Preston, Idaho</title>
         <meta name="description" content="Naturally Weather Preston, Idaho">
-    <link rel="shortcut icon" href="favicon (1).ico">
+    <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/normalize.css">
           <link rel="stylesheet" href="css/small.css">
           <link rel="stylesheet" href="css/medium.css">
