--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <li>Lesson 02:<a href="https://mikennaa.github.io/wdd230//lesson2/design-principles.html">Design Principles</a></li>
             <li>Lesson 03:<a href="https://mikennaa.github.io/wdd230//lesson3/index.html">Weather Site Project</a></li>
             <li>Lesson 04:<a href="https://mikennaa.github.io/wdd230/lesson4/preston-4.html">Preston Weather Page</a></li>
+            <li>Lesson 05:<a href="https://mikennaa.github.io/wdd230/lesson5/preston-5.html">Preston Weather Forecast</a></li>
             <li><a href="https://mikennaa.github.io/wdd230/bom/bom.html">BOM Favorites List</a></li>
           </ul>
       </section>
