--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -56,9 +56,9 @@
             <span id="uvindex">4 of 10</span>
           </div>
         </section>
-
       </div>
-      <div class="contentbox">5-Day Forecast</div>
+
+  <section class="contentboxes">
       <h2>5-Day Forecast</h2>
 <div class="forecast">
 	<div class="forecast-col">
@@ -85,19 +85,56 @@
 		<span class="col-head">Fri</span>
 		<img src="images/sunny.png" alt="sunny" width="70" height="auto">
 		<span class="data">60°</span>
-	</div>
-	
+	</div>	
 </div>
+</section>
 
+<section class="contentboxes">
+      <h2>Community News</h2>
+<div class="tomatoes">
+      <img src="images/tomatoes.jpg" alt="A bowl full of tomatoes, it's harvest time" width="350" height="auto">
+</div>
+      <p>
+  Most people I talked to this week have picked the last of their tomato crop and had them in the pressure canner on the stove. The clouds gathered for a day, thundered and lightning, and rain dampened the sidewalks, roads, and grass. Afterward, a brilliantly colored rainbow arched over our neighborhood street.
+  <br><br>
+  Linda Meyers boxed up 163 crocheted and knitted items consisting of 122 hats, 29 scarfs, seven blankets, four sweaters, and one poncho, made by the Knit Wits, and sent to the Knit for Kids New World Vision program.
+  <br><br>
+  The Preston Aquatic Center swimming pool is open Monday, Wednesday and Friday at 8 a.m. They are starting a swim team Speedin’ Sea Turtles for ages 8-18. All are welcome to join the team and need to register at the pool, said Heidi Jensen.
+  <br><br>
+  Hirschi’s Haunted Hollow will be open on their first night, Friday, Oct. 15, a 7 p.m., to Saturday, Oct. 30, at 175 North 800 West in Preston. Regular entrance fee is $3, Trick-Or-Treater admission is $5.
+  <br><br>
+  The Legacy 2 Branch members at the Heritage Senior Living are grateful to have been able to meet with their residents since the end of September, reports Branch President Bart Wilcox. On Sunday, Sept. 26, Linda Lund, who has a brother living at Heritage, spoke about being of good cheer and persevering at a sacrament meeting before General Conference. On Sunday, Oct. 10, they held a Fast and Testimony meeting.
+  <br><br>
+  Jay Jensen, Branch President of the Legacy 3 Branch spoke in their church meeting on Sunday, Oct. 10, covering topics that President Russell M. Nelson talked about at General Conference. Nancy Jensen, Relief Society President, followed the talk with the Come Follow Me Lesson for Sunday School.
+</p>
+    </section>
 
-
-      <div class="contentbox">Article</div>
-      <div class="contentbox">Contact Information</div>
   </section>
 </main>
 
 <footer>
-  <Contact 
+  <section class="contactinfo">
+    <h2>Contact Us</h2>
+    <div class="map">
+    <a href="https://www.google.com/maps/place/70+W+Oneida+St,+Preston,+ID+83263/data=!4m2!3m1!1s0x8754f7eb62a17851:0xf92c5fa2b365fd2?sa=X&ved=2ahUKEwiC6qT51M3zAhXGCTQIHVfFA_8Q8gF6BAgPEAE"><img src="images/preston map.png" alt="Map of Preston, Idaho" width="300" height="auto"></a>
+  </div>
+    <p>Address<br>
+70 West Oneida
+Preston, Idaho 83263</p>
+<p>Phone: (208)852-1817<br>
+  Fax: (208)852-1820 <br>
+  Email: welcome@prestonid.us
+<br>
+<p>Click map for directions</p>
+</p><br>
+<div class="social">
+<a href="www.facebook.com"><img src="images/facebook.png" alt="Facebook icon" width="50" height="auto"></a>
+<a href="www.instagram.com"><img src="images/instagram.png" alt="Instagram icon" width="50" height="auto"></a>
+<a href="www.twitter.com"><img src="images/twitter.png" alt="Twitter icon" width="50" height="auto"></a>
+</div>
+</section>
+    <br>
+    <br>
     &copy; <span id="copyrightyear">2021</span> | Naturally Weather | Attributions | Mikenna Atkinson
     <br> <span id="currentDate"></span>
 </footer>
