--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -16,6 +16,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Poppins:wght@100;200;300;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
   <body>
+    <aside class="psaturday">
+      "Preston Pancakes In The Park" 
+      <br>"Saturday 9am at the City Park Pavillion"
+    </aside>
       <header>
           <img src="images/weatherbolt.png" alt="naturally weather logo with cloud and bolt" width="150" height="150">
           <section>
