--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -17,8 +17,8 @@
   </head>
   <body>
     <aside class="psaturday">
-      "Preston Pancakes In The Park" 
-      <br>"Saturday 9am at the City Park Pavillion"
+      Preston Pancakes In The Park! 
+      <br>Saturday 9am at the City Park Pavillion
     </aside>
       <header>
           <img src="images/weatherbolt.png" alt="naturally weather logo with cloud and bolt" width="150" height="150">
