currentval color update

--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -49,15 +49,15 @@
           <h2>Weather Summary</h2>
           <div class="gridlayout">
             <span class="suminfo">Currently:</span>
-            <span id="currently">Partly Cloudy</span>
+            <span id="currentval">Partly Cloudy</span>
             <span class="suminfo">Temperature:</span>
-            <span id="temperature">60°F</span>
+            <span id="currentval">60°F</span>
             <span class="suminfo">Wind:</span>
-            <span id="windchill">10 mph</span>
+            <span id="currentval">10 mph</span>
             <span class="suminfo">Humidity:</span>
-            <span id="humidity">55%</span>
+            <span id="currentval">55%</span>
             <span class="suminfo">UV Index:</span>
-            <span id="uvindex">4 of 10</span>
+            <span id="currentval">4 of 10</span>
           </div>
         </section>
       </div>
