--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -17,22 +17,25 @@
 <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Poppins:wght@100;200;300;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="pfriday">
+
+    <div class="pancakefriday">
       <p>Preston Pancakes In The Park! 
       <br>Saturday 9am at the City Park Pavillion</p>
       </div>
+      
       <header>
-
         <picture><img src="images/weatherbolt.png" alt="naturally weather logo with cloud and bolt" width="150" height="150"></picture>
-          <section>
+         
+        <section class="headings">
           <h1>Naturally Weather</h1>
         <div class="tagline">Predicting Mothernature before the day begins</div>
       </section>
       </header>
 
-      <nav>
-        <button onclick="toggleMenu()">&#9776; Menu</button>
-            <ul class="mainnav"class="hide">
+
+      <nav class="clearfix">
+        <button onclick="toggleMenu()">&#9776; </button>
+            <ul class="primaryNav"class="hide">
             <li><a href="index.html">Home</a></li>
             <li class="activebutton"><a href="preston-4.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
