--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -33,9 +33,9 @@
       </header>
 
 
-      <nav class="clearfix">
-        <button onclick="toggleMenu()">&#9776; </button>
-            <ul class="primaryNav"class="hide">
+      <nav class="hammenu">
+        <button onclick="toggleMenu()">&#9776; Menu</button>
+            <ul id="primaryNav"class="hide">
             <li><a href="index.html">Home</a></li>
             <li class="activebutton"><a href="preston-4.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
