--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -35,7 +35,7 @@
 
       <nav class="hammenu">
         <button onclick="toggleMenu()">&#9776; Menu</button>
-            <ul id="primaryNav"class="hide">
+            <ul id="primaryNav" class="hide">
             <li><a href="index.html">Home</a></li>
             <li class="activebutton"><a href="preston-4.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
@@ -49,7 +49,7 @@
   <section class="maincontent">
   <h2>Welcome To The City of Preston, Idaho</h2>
       <div class="herodiv">
-        <img src="images/towncrop.jpg" alt="City view of Preston,Idaho" width="700" height="auto">
+        <img class="prestontown" src="images/towncrop.jpg" alt="City view of Preston,Idaho">
         <section class="summary">
           <h2>Weather Summary</h2>
           <div class="gridlayout">
