--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
-<script defer src="js/date.js"></script>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+      <script defer src="js/date.js"></script>
   </head>
 
   <body>
@@ -40,5 +40,8 @@
     <footer>
       &copy; <span id="copyrightyear"></span> | Mikenna Atkinson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a> Last Updated:<span id="lastupdate"></span>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js">
+    </script>
+    <script src="js/fonts.js"></script>
     </body>
 </html>
