--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -55,21 +55,22 @@
         <source srcset="images/towncrop.jpg" media="(max-width: 503px)">
         <source srcset="" media="(max-width:942px)">
         <source srcset="" media="(max-width:943px)">
-        <img src="" alt="City view of Preston, Idaho">
+        <img src="images/towncrop.jpg" alt="City view of Preston, Idaho">
         </picture>
         
+
         <section class="summary">
           <h2>Weather Summary</h2>
           <div class="gridlayout">
             <span class="suminfo">Currently:</span>
             <span class="currentval">Partly Cloudy</span>
             <span class="suminfo">Temperature:</span>
-            <span class="currentval">60°F</span>
+            <span class="temp">60°F</span>
             <span class="suminfo">Wind Chill:
                 <span class="windchill"></span></span>
             <span class="currentval">10 mph</span>
-            <span class="currentval">Wind Speed:</span>
-            <span class="suminfo">
+            <span class="suminfo">Wind Speed:</span>
+            <span class="currentval">
                 <span class="windspeed">7</span> mph</span>
             <span class="suminfo">Humidity:</span>
             <span class="currentval">55%</span>
@@ -163,6 +164,7 @@ Preston, Idaho 83263</p>
     &copy; <span id="copyrightyear">2021</span> | Naturally Weather | Attributions | Mikenna Atkinson
     <br> <span id="currentDate"></span>
 </footer>
-
+<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+<script src="js/fonts.js"></script>
   </body> 
   </html>       
