--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -51,11 +51,11 @@
   <div class="maincontent">
   <h2>Welcome To The City of Preston, Idaho</h2>
       <div class="herodiv">
-        <picture class="prestontown">
-        <source srcset="images/towncrop.jpg" media="(max-width: 503px)">
-        <source srcset="" media="(max-width:942px)">
-        <source srcset="" media="(max-width:943px)">
-        <img src="images/towncrop.jpg" alt="City view of Preston, Idaho">
+        <picture class="prestontown">  
+        <source srcset="images/hero400-small.png" media="(max-width:399px)">
+        <source srcset="images/hero800-medium.png" media="(max-width:799px)">
+        <source srcset="images/hero1200-large.png" media="(min-width:899px)">
+        <img src="images/originalhero.png" alt="City view of Preston, Idaho" width="1100" height="auto">
         </picture>
         
 
