--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -55,7 +55,7 @@
         <source srcset="images/hero400-small.png" media="(max-width:399px)">
         <source srcset="images/hero800-medium.png" media="(max-width:799px)">
         <source srcset="images/hero1200-large.png" media="(min-width:899px)">
-        <img src="images/originalhero.png" alt="City view of Preston, Idaho" width="1100" height="auto">
+        <img src="images/originalhero.jpeg" alt="City view of Preston, Idaho" width="1100" height="auto">
         </picture>
         
 
