--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -130,10 +130,8 @@
   <br><br>
   Jay Jensen, Branch President of the Legacy 3 Branch spoke in their church meeting on Sunday, Oct. 10, covering topics that President Russell M. Nelson talked about at General Conference. Nancy Jensen, Relief Society President, followed the talk with the Come Follow Me Lesson for Sunday School.
 </p>
-</div>
-    </section>
 
-  </section>
+    </section>
 </main>
 
 <footer>
@@ -149,8 +147,7 @@ Preston, Idaho 83263</p>
   Fax: (208)852-1820 <br>
   Email: welcome@prestonid.us
 <br>
-<p>Click map for directions</p>
-</p><br>
+<p>Click map for directions</p><br>
 <div class="social">
 <a href="www.facebook.com"><img src="images/facebook.png" alt="Facebook icon" width="50" height="auto"></a>
 <a href="www.instagram.com"><img src="images/instagram.png" alt="Instagram icon" width="50" height="auto"></a>
