--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li>Lesson 06:<a href="https://mikennaa.github.io/wdd230/lesson6/preston-6.html">Preston Weather Forecast-Images.Fonts.Windchill</a></li>
             <li>Student Presentation:<a href="https://screencast-o-matic.com/watch/cr6FDqVXHNL">Titles and Descriptions</a></li>
             <li><a href="https://mikennaa.github.io/wdd230/bom/bom.html">BOM Favorites List</a></li>
-            <li><a href="">Progressive Images</a></li>
+            <li><a href="https://mikennaa.github.io/wdd230/lesson7/lazyload.html">Progressive Images</a></li>
           </ul>
       </section>
     </main>
