--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
             <li>Lesson 03:<a href="https://mikennaa.github.io/wdd230//lesson3/index.html">Weather Site Project</a></li>
             <li>Lesson 04:<a href="https://mikennaa.github.io/wdd230/lesson4/preston-4.html">Preston Weather Page</a></li>
             <li>Lesson 05:<a href="https://mikennaa.github.io/wdd230/lesson5/preston-5.html">Preston Weather Forecast</a></li>
+            <li>Lesson 05:<a href="https://mikennaa.github.io/wdd230/bom/bom.html">BOM Favorites Activity</a></li>
             <li>Lesson 06:<a href="https://mikennaa.github.io/wdd230/lesson6/preston-6.html">Preston Weather Forecast-Images.Fonts.Windchill</a></li>
             <li>Student Presentation:<a href="https://screencast-o-matic.com/watch/cr6FDqVXHNL">Titles and Descriptions</a></li>
             <li>Lesson 7:<a href="https://mikennaa.github.io/wdd230/lesson7/lazyload.html">Progressive Images Activity</a></li>
-            <li><a href="https://mikennaa.github.io/wdd230/bom/bom.html">BOM Favorites List</a></li>
+            
             
           </ul>
       </section>
