--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <li>Lesson 06:<a href="https://mikennaa.github.io/wdd230/lesson6/preston-6.html">Preston Weather Forecast-Images.Fonts.Windchill</a></li>
             <li>Student Presentation:<a href="https://screencast-o-matic.com/watch/cr6FDqVXHNL">Titles and Descriptions</a></li>
             <li>Lesson 7:<a href="https://mikennaa.github.io/wdd230/lesson7/lazyload.html">Progressive Images Activity</a></li>
+            <li>Lesson 7:<a href="https://mikennaa.github.io/wdd230/lesson7/gallery-7.html">Weather Gallery</a></li>
             
             
           </ul>
